# fio

./: .gitignore  CMakeLists.txt  README.org
code/: CMakeLists.txt
code/bnc/: CMakeLists.txt  catchhacks.hpp  eastdchacks.cpp  file.cpp
code/bnc/fio/: from_chars.cpp  mem.cpp  stdio.cpp  to_chars.cpp
code/lib/: CMakeLists.txt
code/lib/fio/: compiler.hpp  cpuid.cpp  cpuid.hpp  from_chars.hpp  intrinsics.hpp  io.hpp  mem.cpp  mem.hpp  stdhacks.hpp  stdint.hpp  stdio.cpp  stdio.hpp  to_chars.hpp
plot/: plot_dump.m
